# OSMeta

./: .gitignore  .gitmodules  BEVY_ECS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build_wasm  demo.d.ts  demo.js  demo_bg.wasm.d.ts  icon.xcf  manifest.yaml  notes.txt  notes_OSMeta.txt  notes_mail.txt  w
.github/workflows/: cd_android_gh-pages.yml  cd_wasm_gh-pages.yml  ci.yml
arm64-v8a/: README.md
assets/: 8k.md  compass.md  countries-110m.json  mod.rs
examples/: main.rs  o2w0.rs  pbr.rs  test.rs  trees0.rs
src/: big_space.rs  cars.rs  compass.rs  f4control.rs  fly_control.rs  flycam.rs  flycontrol.rs  frontend.rs  geocoord.rs  geopos.rs  geoview.rs  gz.rs  http_assets.rs  instance_parameter.rs  lib.rs  main.rs  materialobject.rs  o2w_utils.rs  pbftile.rs  player.rs  print.rs  rendf.rs  sky.rs  sun.rs  textures.rs  tilemap.rs  ui.rs  viewtile.rs  xr.rs
src/big_space/: debug.rs  grid_cell.rs  propagation.rs  world_query.rs
src/cam_map/: geopos.rs  geoview.rs  mod.rs  osmscene.rs  platform.rs  utils.rs  viewer.rs
src/cam_map/o2w/: cars.rs  instance_parameter.rs  materialobject.rs  mod.rs  pbftile.rs  print.rs  textures.rs  utils.rs  viewtile.rs
src/map_cam/: cameraview.rs  geopos.rs  geoview.rs  mod.rs  osmscene.rs  utils.rs  viewer.rs
src/o2w/: cameraview.rs  frontend.rs  geopos.rs  geoview.rs  materialobject.rs  mod.rs  osmscene.rs  pbftile.rs  utils.rs  viewer.rs  viewtile.rs
src/tilemap/: coord.rs  index.rs
usefull/: main_bevy_trees.rs  main_fps.rs
web/: index.html
