[package]
name = "osmeta"   # OSMeta ???  `#[warn(non_snake_case)]` on by default
version = "0.1.0"
edition = "2021"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.12", features = [
    "jpeg",
] } ## NOT the local file bevy, the one from the net
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" } ## control
bevy_oxr = { git = "https://github.com/awtterpip/bevy_openxr", optional = true }
## bevy_config_cam = { git = "https://github.com/BlackPhlox/bevy_config_cam" } ## { version = "0.3.0"}
glam = "0"


[features]
xr = ["dep:bevy_oxr"]

[target.'cfg(not(target_os="macos"))'.features]
default = ["xr"]
#jpeg = ["bevy_internal/jpeg"]


# [[example]]
# name = "test"
# path = "examples/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
